--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -32,7 +32,7 @@
 {%- liquid
   assign full_width = '100vw'
   assign widths = '375, 550, 750, 1100, 1500, 1780, 2000, 3000, 3840'
-
+  assign decoding = 'async'
   if section.settings.image_behavior == 'ambient'
     assign half_width = '60vw'
     assign full_width = '120vw'
@@ -48,6 +48,9 @@
   assign fetch_priority = 'auto'
   if section.index == 1
     assign fetch_priority = 'high'
+    assign loading = 'eager'
+  else
+    assign loading = 'lazy'
   endif
 -%}
 
@@ -79,7 +82,9 @@
           class: image_class,
           sizes: sizes,
           widths: widths,
-          fetchpriority: fetch_priority
+          fetchpriority: fetch_priority,
+          loading: loading,
+          decoding: decoding
       }}
     </div>
   {%- elsif section.settings.image_2 == blank -%}
@@ -111,7 +116,9 @@
           class: image_class_2,
           sizes: sizes,
           widths: widths,
-          fetchpriority: fetch_priority
+          fetchpriority: fetch_priority,
+          loading: loading,
+          decoding: decoding
       }}
     </div>
   {%- endif -%}
