--- a/sections/slideshow.liquid
+++ b/sections/slideshow.liquid
@@ -132,13 +132,13 @@
               {{
                 block.settings.image
                 | image_url: width: 3840
-                | image_tag: height: height, sizes: sizes, widths: widths, fetchpriority: fetch_priority
+                | image_tag: loading: 'eager', decoding: 'async', height: height, sizes: sizes, widths: widths, fetchpriority: fetch_priority
               }}
             {%- else -%}
               {{
                 block.settings.image
                 | image_url: width: 3840
-                | image_tag: loading: 'lazy', height: height, sizes: sizes, widths: widths
+                | image_tag: loading: 'lazy', decoding: 'async', height: height, sizes: sizes, widths: widths
               }}
             {%- endif -%}
           {%- else -%}
