--- a/snippets/card-collection.liquid
+++ b/snippets/card-collection.liquid
@@ -72,6 +72,7 @@
               width="{{ card_collection.featured_image.width }}"
               loading="lazy"
               class="motion-reduce"
+              decoding="async"
             >
           </div>
         </div>
