change swiffy slider

--- a/sections/featured-collect-test.liquid
+++ b/sections/featured-collect-test.liquid
@@ -62,7 +62,7 @@
   class="color-{{ section.settings.color_scheme }} isolate gradient"
 >
   <div
-    class="swiffy-slider slider-item-show3 slider-item-reveal slider-nav-dark slider-nav-outside-expand"
+    class="page-width swiffy-slider slider-item-show3 slider-item-reveal slider-nav-dark slider-nav-outside-expand"
     id="collection-{{ section.id }}"
     data-id="{{ section.id }}"
   >
